--- a/fly.toml
+++ b/fly.toml
@@ -1,38 +1,23 @@
-# Fly.io Configuration für Archon Enhanced MCP
-app = "archon-multi-agent"
-primary_region = "fra"
-kill_signal = "SIGINT"
-kill_timeout = 5
+# fly.toml app configuration file generated for archon-multi-agent on 2025-08-19T10:28:00Z
+#
+# See https://fly.io/docs/reference/configuration/ for information about how to use this file.
+#
 
-[env]
-  PYTHONPATH = "/app:/app/integrations"
-  PORT = "8080"
+app = 'archon-multi-agent'
+primary_region = 'fra'
 
-[experimental]
-  auto_rollback = true
+[build]
 
-[[services]]
+[http_service]
   internal_port = 8080
-  protocol = "tcp"
-  
-  [services.concurrency]
-    hard_limit = 25
-    soft_limit = 20
-    type = "connections"
+  force_https = true
+  auto_stop_machines = 'stop'
+  auto_start_machines = true
+  min_machines_running = 0
+  processes = ['app']
 
-  [[services.ports]]
-    force_https = true
-    handlers = ["http"]
-    port = 80
-
-  [[services.ports]]
-    handlers = ["tls", "http"]
-    port = 443
-
-  [[services.http_checks]]
-    interval = 10000
-    grace_period = "5s"
-    method = "get"
-    path = "/health"
-    protocol = "http"
-    timeout = 2000
+[[vm]]
+  memory = '1gb'
+  cpu_kind = 'shared'
+  cpus = 1
+  memory_mb = 1024
