--- a/fly.toml
+++ b/fly.toml
@@ -1,20 +1,10 @@
-# Fly.io - KOMPLETTES Archon System mit Frontend
-app = "archon-multi-agent"
-primary_region = "fra"
-kill_signal = "SIGTERM"
-kill_timeout = 30
+# fly.toml app configuration file generated for archon-multi-agent on 2025-08-20T18:27:37Z
+#
+# See https://fly.io/docs/reference/configuration/ for information about how to use this file.
+#
 
-[env]
-  PORT = "8080"
-  NODE_ENV = "production"
-  PYTHONPATH = "/app"
-  PYTHONUNBUFFERED = "1"
-  # API URL für Frontend - intern über Nginx
-  VITE_API_URL = "/api"
-  # Diese müssen als Secrets gesetzt werden:
-  # fly secrets set SUPABASE_URL=xxx
-  # fly secrets set SUPABASE_SERVICE_KEY=xxx
-  # fly secrets set OPENAI_API_KEY=xxx (optional)
+app = 'archon-multi-agent'
+primary_region = 'ams'
 
 [build]
 
@@ -30,31 +20,4 @@ kill_timeout = 30
   memory = '1gb'
   cpu_kind = 'shared'
   cpus = 1
-
-[[services]]
-  internal_port = 8080
-  protocol = "tcp"
-  auto_stop_machines = false
-  auto_start_machines = true
-  
-  [services.concurrency]
-    type = "connections"
-    hard_limit = 25
-    soft_limit = 20
-
-  [[services.ports]]
-    port = 80
-    handlers = ["http"]
-    force_https = true
-
-  [[services.ports]]
-    port = 443
-    handlers = ["tls", "http"]
-
-  [[services.http_checks]]
-    interval = 10000
-    grace_period = "10s"
-    method = "get"
-    path = "/health"
-    protocol = "http"
-    timeout = 2000
+  memory_mb = 1024
